crates/graphql-orm/tests/ui/retention_context_cannot_escape.stderr
error: lifetime may not live long enough
 --> tests/ui/retention_context_cannot_escape.rs:5:46
  |
5 |         .retention_transaction(|maintenance| Box::pin(async move { Ok(maintenance) }))
  |                                 ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
  |                                 |          |
  |                                 |          return type of closure is Pin<Box<dyn std::future::Future<Output = Result<&'2 mut RetentionContext<'_>, OrmPublicError>> + std::marker::Send>>
  |                                 has type `&'1 mut RetentionContext<'_>`

error: lifetime may not live long enough
 --> tests/ui/retention_context_cannot_escape.rs:5:46
  |
5 |         .retention_transaction(|maintenance| Box::pin(async move { Ok(maintenance) }))
  |                                 ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'3` must outlive `'4`
  |                                 |          |
  |                                 |          return type of closure is Pin<Box<dyn std::future::Future<Output = Result<&mut RetentionContext<'4>, OrmPublicError>> + std::marker::Send>>
  |                                 has type `&mut RetentionContext<'3>`
  |
  = note: requirement occurs because of a mutable reference to `RetentionContext<'_>`
  = note: mutable references are invariant over their type parameter
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
